<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>

    <string name="scores_app">SCORES APP</string>

    <string name="library_app">LIBRARY APP</string>

    <string name="build_it_bigger">BUILD_IT_BIGGER</string>

    <string name="xyz_reader">XYZ READER</string>

    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
