
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/my_nanodegree_apps"
            android:id="@+id/topTextLabel"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotifyStreamerButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/buttons_color"
            android:layout_marginBottom="@dimen/button_margin"
            android:onClick="onButtonClickListener"
            />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/scoresAppButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/buttons_color"
            android:layout_marginBottom="@dimen/button_margin"
            android:onClick="onButtonClickListener"
            />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/libraryAppButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/buttons_color"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:onClick="onButtonClickListener"
            />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/buildItBiggerButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/buttons_color"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:onClick="onButtonClickListener"
            />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/xyzReaderButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/buttons_color"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:onClick="onButtonClickListener"
            />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstoneButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/capstone_button_color"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:onClick="onButtonClickListener"
            />
    </LinearLayout>
